package com.example.domain.enums;

public enum UserRole {
    ADMIN,
    DIRECTOR,
    TECHNICIAN
}
