package com.example.domain;

public enum MaintenanceStatus {
    PENDING,
    ACCEPTED,
    COMPLETED
}