package com.example.domain.enums;

public enum MachineStatus {
    ACTIVE,
    ASSISTANCE_REQUESTED,
    MAINTENANCE
}
