package com.example.domain.enums;

public enum SensorType {
    TEMPERATURE,
    PRESSURE,
    VIBRATION
}
