@startuml
skinparam classAttributeIconSize 0

' ============================
' ENUMS
' ============================
enum Gender {
  MALE
  FEMALE
  OTHER
  PREFER_NOT_TO_SAY
}

enum MachineStatus {
  ACTIVE
  MAINTENANCE
  ASSISTANCE_REQUESTED
}

enum AssistanceRequestedStatus{
  PENDING
  ACCEPTED
  COMPLETED
}

enum MaintenanceStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
}

enum MaintenanceType {
  NORMAL
  SPECIAL
  ASSISTANCE
  ORIGINAL
}


enum SensorType {
  TEMPERATURE
  PRESSURE
  VIBRATION
}

enum UserRole {
  ADMIN
  DIRECTOR
  TECHNICIAN
}

' ============================
' USER HIERARCHY
' ============================
class User {
  - Long id
  - String name
  - String email
  - String passwordHash
  - String phoneNumber
  - Integer age
  - Gender gender
  - UserRole role
  - LocalDateTime updatedAt
  - boolean isActive
  - boolean isOnline
  - boolean isPrivileged
}

class Admin
class MaintenanceDirector

class Technician {
  - int numberOfFaultsFixed
  - int assistedCounter
  - int wasAssistedCounter
  - double averageRepairTime
  - int tasksCompleted
  - int tasksPending
  - boolean isAvailable
  - Machine currentAssignment
  - List<String> skillSet
}

User <|-- Admin
User <|-- Technician
User <|-- MaintenanceDirector

' ============================
' MACHINE
' ============================
class Machine {
- Long id
  - String name
  - String location
  - Integer importanceLevel
  - MachineStatus status
  - LocalDateTime lastDownDate
  - Double downtimeSum
  - boolean suspicionFlag
  - boolean vibrationSensor
  - boolean temperatureSensor
  - boolean pressureSensor
  - Integer actionRequiredCount
  - Integer assistanceRequestedCount
  - List<Technician> assignedTechnicians
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  - LocalDateTime maintenanceFinishedAt
}

Machine "1" o-- "*" Problem
Machine "1" o-- "*" Maintenance
Machine "1" o-- "*" SensorReading

' ============================
' PROBLEM
' ============================
class Problem {
  - Long id
  - Machine machine
  - String description
  - LocalDateTime detectedAt
  - Double priority
  - boolean resolved
  - LocalDateTime startProblemDate
  - LocalDateTime solvedProblemDate
  - String faultSeverity
  - Technician assignedTechnician
}

Problem "1" --> "0..1" Technician : assignedTechnician

' ============================
' ASSISTANCE REQUEST (REAL)
' ============================
class AssistanceRequest {
  - Long id
  - Problem problem
  - Technician requestedBy
  - String reason
  - AssistanceRequestStatus status
  - Technician assignedTechnician
  - LocalDateTime createdAt
  - LocalDateTime acceptedAt
  - LocalDateTime completedAt
}

AssistanceRequest --> Problem
AssistanceRequest --> Technician : requestedBy
AssistanceRequest --> Technician : assignedTechnician

' ============================
' MAINTENANCE
' ============================
class Maintenance {
  - Long id
  - Machine machine
  - Technician technician
  - MaintenanceType type
  - MaintenanceStatus status
  - String notes
}

Maintenance --> Machine
Maintenance --> Technician
Maintenance --> Machine
Maintenance --> Technician
Maintenance "1" o-- "*" MaintenanceLog

' ============================
' MAINTENANCE LOGS
' ============================
class MaintenanceLog {
  - Long id
  - Maintenance maintenance
  - Technician technician
  - String title
  - String description
  - Double hoursSpent
  - String partsUsed
  - LocalDateTime createdAt
}

MaintenanceLog "*" --> "1" Maintenance : maintenance
MaintenanceLog "*" --> "1" Technician : technician

' ============================
' MAINTENANCE SESSIONS
' ============================
class MaintenanceSession {
  - Long id
  - Technician technician
  - Machine machine
  - AssistanceRequest request
  - Maintenance maintenanceRecord
  - LocalDateTime startTime
  - LocalDateTime endTime
  - boolean active
}

MaintenanceSession "*" --> "1" Technician : technician
MaintenanceSession "*" --> "1" Machine : machine
MaintenanceSession "*" --> "0..1" AssistanceRequest : request
MaintenanceSession "*" --> "0..1" Maintenance : maintenanceRecord

' ============================
' SENSOR READING (API MODEL)
' ============================
class SensorReading {
  - Long id
  - Machine machine
  - SensorType sensorType
  - Double value
  - LocalDateTime recordedAt
}

SensorReading --> Machine
@enduml